[FIX] Overflow y change

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: linear-gradient(45deg, #e6a927, #1c63a5, #4f6d8b, #2a5298);
   background-size: 400% 400%;
   animation: gradienteAnimado 10s ease infinite;
@@ -75,7 +75,6 @@ body {
   margin-top: 1rem;
   color: white;
   z-index: 10;
-  overflow-y: hidden;
 }
 .corner-images {
   width: 100%;
@@ -109,10 +108,20 @@ body {
   .palma {
     max-width: 100px;
   }
+  .contenidos {
+    justify-content: center;
+    align-items: center;
+    margin-top: 420px;
+  }
 }
 
 @media (max-width: 480px) {
   .palma {
     max-width: 100px;
+  }
+  .contenidos {
+    justify-content: center;
+    align-items: center;
+    margin-top: 1000px;
   }
 }
